Stylized the zones with arrows and background color

--- a/ZoneSystemAssistant.iOS/ZoneSystemAssistant.iOS.csproj
+++ b/ZoneSystemAssistant.iOS/ZoneSystemAssistant.iOS.csproj
@@ -142,4 +142,13 @@
       <Name>ZoneSystemAssistant</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\rightarrow%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\rightarrow%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\rightarrow.png" />
+  </ItemGroup>
 </Project>
