--- a/ZoneSystemAssistant.Android/ZoneSystemAssistant.Android.csproj
+++ b/ZoneSystemAssistant.Android/ZoneSystemAssistant.Android.csproj
@@ -98,5 +98,8 @@
       <Name>ZoneSystemAssistant</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\rightarrow.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
