--- a/ZoneSystemAssistant.iOS/ZoneSystemAssistant.iOS.csproj
+++ b/ZoneSystemAssistant.iOS/ZoneSystemAssistant.iOS.csproj
@@ -151,4 +151,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\rightarrow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\leftarrow%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\leftarrow%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\leftarrow.png" />
+  </ItemGroup>
 </Project>
