--- a/ZoneSystemAssistant.UWP/ZoneSystemAssistant.UWP.csproj
+++ b/ZoneSystemAssistant.UWP/ZoneSystemAssistant.UWP.csproj
@@ -153,6 +153,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>8.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.3.1</Version>
     </PackageReference>
