--- a/ZoneSystemAssistant/ZoneSystemAssistant.csproj
+++ b/ZoneSystemAssistant/ZoneSystemAssistant.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="values.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="values.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
