--- a/ZoneSystemAssistant/ZoneSystemAssistant.csproj
+++ b/ZoneSystemAssistant/ZoneSystemAssistant.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
