--- a/ZoneSystemAssistant/ZoneSystemAssistant.csproj
+++ b/ZoneSystemAssistant/ZoneSystemAssistant.csproj
@@ -23,6 +23,11 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\PrefsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
